--- a/gustosel 24.03.2022/index.html
+++ b/gustosel 24.03.2022/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Acasa</title>
+    <title>Acasă</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
 
+    <link rel="icon" type="image/x-icon" href="img/gustosel-resize.jpg">
+    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
